[gd_scene load_steps=5 format=3 uid="uid://7iv62tt4a6ou"]

[ext_resource type="Theme" uid="uid://stwin42kygl6" path="res://assets/default_theme.tres" id="1_gjl0p"]
[ext_resource type="FontFile" uid="uid://dmctje0ufcr10" path="res://assets/fonts/megahard-small-font.ttf" id="2_fnb1t"]
[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="2_nj2hl"]

[sub_resource type="LabelSettings" id="LabelSettings_bjxxp"]
font = ExtResource("2_fnb1t")
font_size = 36
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gjl0p")
script = ExtResource("2_nj2hl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="ContinueBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Continue"

[node name="NewGameBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "New Game"

[node name="LoadGameBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Load Game"

[node name="QuitBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Quit"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fnb1t")
text = "Aidomon"
label_settings = SubResource("LabelSettings_bjxxp")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Select a Saved Game"
initial_position = 2
size = Vector2i(500, 300)
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "saved_games"
filters = PackedStringArray("*.json")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LoadGameBtn" to="." method="_on_load_game_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
